--- a/LI2/latex/logica_8h.tex
+++ b/LI2/latex/logica_8h.tex
@@ -2,6 +2,7 @@
 \label{logica_8h}\index{logica.h@{logica.h}}
 {\ttfamily \#include $<$stdio.\+h$>$}\newline
 {\ttfamily \#include \char`\"{}dados.\+h\char`\"{}}\newline
+{\ttfamily \#include \char`\"{}lista.\+h\char`\"{}}\newline
 \doxysubsection*{Funções}
 \begin{DoxyCompactItemize}
 \item 
@@ -60,32 +61,32 @@ Determina se foi o jogador 1 ou 2 a jogar, e, consoante isto, coloca na array \c
 Incrementa o numero de jogadas. \end{quote}
 
 
-Definido na linha 29 do ficheiro logica.\+c.
+Definido na linha 30 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{29                                                    \{}
-\DoxyCodeLine{30     \textcolor{keywordtype}{int} jog = \mbox{\hyperlink{dados_8h_ad6e326e4ffa57ca1ae0c75377ecefc8c}{obter\_jogador\_atual}}(e);}
-\DoxyCodeLine{31     \textcolor{keywordtype}{int} jogadas = \mbox{\hyperlink{dados_8h_a6cd0b387bdee9e18003c78852394aa63}{obter\_numero\_de\_jogadas}}(e);}
-\DoxyCodeLine{33     \textcolor{keywordflow}{if} (jog == 1) \{}
-\DoxyCodeLine{34         e-\/>jogadas[jogadas].jogador1.linha = lin;}
-\DoxyCodeLine{35         e-\/>jogadas[jogadas].jogador1.coluna = col;}
-\DoxyCodeLine{36     \} \textcolor{keywordflow}{else} \{}
-\DoxyCodeLine{37         e-\/>jogadas[jogadas].jogador2.linha = lin;}
-\DoxyCodeLine{38         e-\/>jogadas[jogadas].jogador2.coluna = col;}
-\DoxyCodeLine{39     \}}
-\DoxyCodeLine{40     \textcolor{keywordflow}{if} (jog == 1)}
-\DoxyCodeLine{41         e-\/>jogador\_atual = 2;}
-\DoxyCodeLine{42     \textcolor{keywordflow}{else} \{}
-\DoxyCodeLine{43         e-\/>jogador\_atual = 1;}
-\DoxyCodeLine{45         \textcolor{keywordflow}{if} (e-\/>num\_jogadas >= e-\/>max\_num\_jogadas) \{}
-\DoxyCodeLine{46             e-\/>num\_jogadas++;}
-\DoxyCodeLine{47             e-\/>max\_num\_jogadas++;}
-\DoxyCodeLine{48         \}}
-\DoxyCodeLine{49         \textcolor{keywordflow}{else}}
-\DoxyCodeLine{50             e-\/>num\_jogadas++;}
-\DoxyCodeLine{51     \}}
-\DoxyCodeLine{52 \}}
+\DoxyCodeLine{30                                                    \{}
+\DoxyCodeLine{31     \textcolor{keywordtype}{int} jog = \mbox{\hyperlink{dados_8h_ad6e326e4ffa57ca1ae0c75377ecefc8c}{obter\_jogador\_atual}}(e);}
+\DoxyCodeLine{32     \textcolor{keywordtype}{int} jogadas = \mbox{\hyperlink{dados_8h_a6cd0b387bdee9e18003c78852394aa63}{obter\_numero\_de\_jogadas}}(e);}
+\DoxyCodeLine{34     \textcolor{keywordflow}{if} (jog == 1) \{}
+\DoxyCodeLine{35         e-\/>jogadas[jogadas].jogador1.linha = lin;}
+\DoxyCodeLine{36         e-\/>jogadas[jogadas].jogador1.coluna = col;}
+\DoxyCodeLine{37     \} \textcolor{keywordflow}{else} \{}
+\DoxyCodeLine{38         e-\/>jogadas[jogadas].jogador2.linha = lin;}
+\DoxyCodeLine{39         e-\/>jogadas[jogadas].jogador2.coluna = col;}
+\DoxyCodeLine{40     \}}
+\DoxyCodeLine{41     \textcolor{keywordflow}{if} (jog == 1)}
+\DoxyCodeLine{42         e-\/>jogador\_atual = 2;}
+\DoxyCodeLine{43     \textcolor{keywordflow}{else} \{}
+\DoxyCodeLine{44         e-\/>jogador\_atual = 1;}
+\DoxyCodeLine{46         \textcolor{keywordflow}{if} (e-\/>num\_jogadas >= e-\/>max\_num\_jogadas) \{}
+\DoxyCodeLine{47             e-\/>num\_jogadas++;}
+\DoxyCodeLine{48             e-\/>max\_num\_jogadas++;}
+\DoxyCodeLine{49         \}}
+\DoxyCodeLine{50         \textcolor{keywordflow}{else}}
+\DoxyCodeLine{51             e-\/>num\_jogadas++;}
+\DoxyCodeLine{52     \}}
+\DoxyCodeLine{53 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_a9065d2c25c9052ce1f7f5e1d6272dd6e}\label{logica_8h_a9065d2c25c9052ce1f7f5e1d6272dd6e}} 
@@ -108,18 +109,18 @@ Verifica se todas as casas a volta da peça branca estao preenchidas com peças 
 \end{DoxyReturn}
 
 
-Definido na linha 99 do ficheiro logica.\+c.
+Definido na linha 100 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{99                              \{}
-\DoxyCodeLine{100     \textcolor{keywordtype}{int} col = e-\/>ultima\_jogada.coluna, lin = e-\/>ultima\_jogada.linha;}
-\DoxyCodeLine{101     \textcolor{keywordflow}{if} (\mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, lin, col + 1) == PRETA \&\& \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, lin+1, col+1) == PRETA \&\& \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, lin+1, col) == PRETA \&\&}
-\DoxyCodeLine{102     \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, lin, col-\/1) == PRETA \&\& \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, lin-\/1, col-\/1) == PRETA \&\& \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, lin-\/1, col) == PRETA)}
-\DoxyCodeLine{103         \textcolor{keywordflow}{return} 1;}
-\DoxyCodeLine{104     \textcolor{keywordflow}{else}}
-\DoxyCodeLine{105         \textcolor{keywordflow}{return} 0;}
-\DoxyCodeLine{106 \}}
+\DoxyCodeLine{100                              \{}
+\DoxyCodeLine{101     \textcolor{keywordtype}{int} col = e-\/>ultima\_jogada.coluna, lin = e-\/>ultima\_jogada.linha;}
+\DoxyCodeLine{102     \textcolor{keywordflow}{if} (\mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, lin, col + 1) == PRETA \&\& \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, lin+1, col+1) == PRETA \&\& \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, lin+1, col) == PRETA \&\&}
+\DoxyCodeLine{103     \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, lin, col-\/1) == PRETA \&\& \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, lin-\/1, col-\/1) == PRETA \&\& \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, lin-\/1, col) == PRETA)}
+\DoxyCodeLine{104         \textcolor{keywordflow}{return} 1;}
+\DoxyCodeLine{105     \textcolor{keywordflow}{else}}
+\DoxyCodeLine{106         \textcolor{keywordflow}{return} 0;}
+\DoxyCodeLine{107 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_a1e08ddaa296db25866c21b3ea2a9c106}\label{logica_8h_a1e08ddaa296db25866c21b3ea2a9c106}} 
@@ -148,25 +149,25 @@ Verifica primeiro se a peça está num dos cantos do tabuleiro, e, caso esteja, 
 Caso nao esteja em um dos cantos, chama a função \char`\"{}check\+\_\+around()\char`\"{} para verificar se está ou nao encurralada. \end{quote}
 
 
-Definido na linha 81 do ficheiro logica.\+c.
+Definido na linha 82 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{81                            \{}
-\DoxyCodeLine{82     \textcolor{keywordtype}{int} col = e-\/>ultima\_jogada.coluna, lin = e-\/>ultima\_jogada.linha;}
-\DoxyCodeLine{84     \textcolor{keywordflow}{if} (col == 0 \&\& lin == 0) \{}
-\DoxyCodeLine{85         \textcolor{keywordflow}{if} (\mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, lin, col + 1) == PRETA \&\& \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, lin+1, col+1) == PRETA \&\& \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, lin+1, col) == PRETA)}
-\DoxyCodeLine{86             \textcolor{keywordflow}{return} 1;}
-\DoxyCodeLine{87     \}}
-\DoxyCodeLine{88     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (col == 7 \&\& lin == 7) \{}
-\DoxyCodeLine{89         \textcolor{keywordflow}{if} (\mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, lin, col-\/1) == PRETA \&\& \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, lin-\/1, col-\/1) == PRETA \&\& \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, lin-\/1, col) == PRETA)}
-\DoxyCodeLine{90             \textcolor{keywordflow}{return} 1;}
-\DoxyCodeLine{91     \}}
-\DoxyCodeLine{93     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_a9065d2c25c9052ce1f7f5e1d6272dd6e}{check\_around}}(e) == 1)}
-\DoxyCodeLine{94         \textcolor{keywordflow}{return} 1;}
-\DoxyCodeLine{95 }
-\DoxyCodeLine{96     \textcolor{keywordflow}{return} 0;}
-\DoxyCodeLine{97 \}}
+\DoxyCodeLine{82                            \{}
+\DoxyCodeLine{83     \textcolor{keywordtype}{int} col = e-\/>ultima\_jogada.coluna, lin = e-\/>ultima\_jogada.linha;}
+\DoxyCodeLine{85     \textcolor{keywordflow}{if} (col == 0 \&\& lin == 0) \{}
+\DoxyCodeLine{86         \textcolor{keywordflow}{if} (\mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, lin, col + 1) == PRETA \&\& \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, lin+1, col+1) == PRETA \&\& \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, lin+1, col) == PRETA)}
+\DoxyCodeLine{87             \textcolor{keywordflow}{return} 1;}
+\DoxyCodeLine{88     \}}
+\DoxyCodeLine{89     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (col == 7 \&\& lin == 7) \{}
+\DoxyCodeLine{90         \textcolor{keywordflow}{if} (\mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, lin, col-\/1) == PRETA \&\& \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, lin-\/1, col-\/1) == PRETA \&\& \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, lin-\/1, col) == PRETA)}
+\DoxyCodeLine{91             \textcolor{keywordflow}{return} 1;}
+\DoxyCodeLine{92     \}}
+\DoxyCodeLine{94     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_a9065d2c25c9052ce1f7f5e1d6272dd6e}{check\_around}}(e) == 1)}
+\DoxyCodeLine{95         \textcolor{keywordflow}{return} 1;}
+\DoxyCodeLine{96 }
+\DoxyCodeLine{97     \textcolor{keywordflow}{return} 0;}
+\DoxyCodeLine{98 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_a97c7ad5b7c6b698beca8006e674b85da}\label{logica_8h_a97c7ad5b7c6b698beca8006e674b85da}} 
@@ -191,19 +192,19 @@ Função que verifica se a jogada é possivel.
 \end{DoxyReturn}
 
 
-Definido na linha 55 do ficheiro logica.\+c.
+Definido na linha 56 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{55                                               \{}
-\DoxyCodeLine{56     \textcolor{keywordtype}{int} lin = abs(c.linha -\/ 8) -\/ 1;}
-\DoxyCodeLine{57     \textcolor{keywordflow}{if} (\mbox{\hyperlink{dados_8h_a6faa68373203923729ed38657aa0f768}{obter\_estado\_casa}}(e,c) == BRANCA || \mbox{\hyperlink{dados_8h_a6faa68373203923729ed38657aa0f768}{obter\_estado\_casa}}(e,c) == PRETA ||}
-\DoxyCodeLine{58     abs((e-\/>ultima\_jogada.linha) -\/ lin) > 1 || abs((e-\/>ultima\_jogada.coluna) -\/ (c.coluna)) > 1) \{}
-\DoxyCodeLine{59 }
-\DoxyCodeLine{60         \textcolor{keywordflow}{return} 0;}
-\DoxyCodeLine{61     \}}
-\DoxyCodeLine{62     \textcolor{keywordflow}{else} \textcolor{keywordflow}{return} 1;}
-\DoxyCodeLine{63 \}}
+\DoxyCodeLine{56                                               \{}
+\DoxyCodeLine{57     \textcolor{keywordtype}{int} lin = abs(c.linha -\/ 8) -\/ 1;}
+\DoxyCodeLine{58     \textcolor{keywordflow}{if} (\mbox{\hyperlink{dados_8h_a6faa68373203923729ed38657aa0f768}{obter\_estado\_casa}}(e,c) == BRANCA || \mbox{\hyperlink{dados_8h_a6faa68373203923729ed38657aa0f768}{obter\_estado\_casa}}(e,c) == PRETA ||}
+\DoxyCodeLine{59     abs((e-\/>ultima\_jogada.linha) -\/ lin) > 1 || abs((e-\/>ultima\_jogada.coluna) -\/ (c.coluna)) > 1}
+\DoxyCodeLine{60     || lin > 7  || lin < 0 || c.coluna >  7 || c.coluna < 0)}
+\DoxyCodeLine{61         \textcolor{keywordflow}{return} 0;}
+\DoxyCodeLine{62     \textcolor{keywordflow}{else}}
+\DoxyCodeLine{63         \textcolor{keywordflow}{return} 1;}
+\DoxyCodeLine{64 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_ac313d7e553b1e2b5f266acb9bfff8141}\label{logica_8h_ac313d7e553b1e2b5f266acb9bfff8141}} 
@@ -238,24 +239,24 @@ Coloca uma peça preta na casa anterior da peça branca. \end{quote}
 Coloca a nova posição da peça branca como posição anterior para ser usada futuramente. \end{quote}
 
 
-Definido na linha 10 do ficheiro logica.\+c.
+Definido na linha 11 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{10                                    \{}
-\DoxyCodeLine{11     \textcolor{keywordtype}{int} lin = abs(c.linha -\/ 8) -\/ 1;}
-\DoxyCodeLine{12     \textcolor{keywordtype}{int} col = c.coluna;}
-\DoxyCodeLine{13     \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_a97c7ad5b7c6b698beca8006e674b85da}{jogada\_possivel}}(e,c) == 1) \{}
-\DoxyCodeLine{15         e-\/>tab[lin][col] = BRANCA;}
-\DoxyCodeLine{17         e-\/>tab[(e-\/>ultima\_jogada).linha][(e-\/>ultima\_jogada).coluna] = PRETA;}
-\DoxyCodeLine{19         e-\/>ultima\_jogada.coluna = col;}
-\DoxyCodeLine{20         e-\/>ultima\_jogada.linha = lin;}
-\DoxyCodeLine{21         \mbox{\hyperlink{logica_8h_a9cf19fce71c78359807a3f579925edbb}{atualiza\_jogada}}(e, col, lin);}
-\DoxyCodeLine{22         \textcolor{keywordflow}{return} 1;}
-\DoxyCodeLine{23     \}}
-\DoxyCodeLine{24     \textcolor{keywordflow}{else}}
-\DoxyCodeLine{25     \textcolor{keywordflow}{return} 0;}
-\DoxyCodeLine{26 \}}
+\DoxyCodeLine{11                                    \{}
+\DoxyCodeLine{12     \textcolor{keywordtype}{int} lin = abs(c.linha -\/ 8) -\/ 1;}
+\DoxyCodeLine{13     \textcolor{keywordtype}{int} col = c.coluna;}
+\DoxyCodeLine{14     \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_a97c7ad5b7c6b698beca8006e674b85da}{jogada\_possivel}}(e,c) == 1) \{}
+\DoxyCodeLine{16         e-\/>tab[lin][col] = BRANCA;}
+\DoxyCodeLine{18         e-\/>tab[(e-\/>ultima\_jogada).linha][(e-\/>ultima\_jogada).coluna] = PRETA;}
+\DoxyCodeLine{20         e-\/>ultima\_jogada.coluna = col;}
+\DoxyCodeLine{21         e-\/>ultima\_jogada.linha = lin;}
+\DoxyCodeLine{22         \mbox{\hyperlink{logica_8h_a9cf19fce71c78359807a3f579925edbb}{atualiza\_jogada}}(e, col, lin);}
+\DoxyCodeLine{23         \textcolor{keywordflow}{return} 1;}
+\DoxyCodeLine{24     \}}
+\DoxyCodeLine{25     \textcolor{keywordflow}{else}}
+\DoxyCodeLine{26     \textcolor{keywordflow}{return} 0;}
+\DoxyCodeLine{27 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}\label{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}} 
@@ -278,24 +279,24 @@ Verifica se o jogo terminou.
 \end{DoxyReturn}
 
 
-Definido na linha 66 do ficheiro logica.\+c.
+Definido na linha 67 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{66                                \{}
-\DoxyCodeLine{67     \textcolor{keywordtype}{int} r = 0;}
-\DoxyCodeLine{68     \textcolor{keywordflow}{if} ((e-\/>ultima\_jogada.coluna == 0 \&\& e-\/>ultima\_jogada.linha == 7))}
-\DoxyCodeLine{69         r = 1;}
-\DoxyCodeLine{70     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} ((e -\/>ultima\_jogada.linha == 0 \&\& e-\/>ultima\_jogada.coluna == 7))}
-\DoxyCodeLine{71             r = 2;}
-\DoxyCodeLine{72     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (e-\/>num\_jogadas == 31)}
-\DoxyCodeLine{73                 r = 3;}
-\DoxyCodeLine{74     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_a1e08ddaa296db25866c21b3ea2a9c106}{encurralado}}(e) == 1)}
-\DoxyCodeLine{75         r = 4;}
-\DoxyCodeLine{76     \textcolor{keywordflow}{else}}
-\DoxyCodeLine{77         r = 0;}
-\DoxyCodeLine{78     \textcolor{keywordflow}{return} r;}
-\DoxyCodeLine{79 \}}
+\DoxyCodeLine{67                                \{}
+\DoxyCodeLine{68     \textcolor{keywordtype}{int} r = 0;}
+\DoxyCodeLine{69     \textcolor{keywordflow}{if} ((e-\/>ultima\_jogada.coluna == 0 \&\& e-\/>ultima\_jogada.linha == 7))}
+\DoxyCodeLine{70         r = 1;}
+\DoxyCodeLine{71     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} ((e -\/>ultima\_jogada.linha == 0 \&\& e-\/>ultima\_jogada.coluna == 7))}
+\DoxyCodeLine{72             r = 2;}
+\DoxyCodeLine{73     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (e-\/>num\_jogadas == 31)}
+\DoxyCodeLine{74                 r = 3;}
+\DoxyCodeLine{75     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_a1e08ddaa296db25866c21b3ea2a9c106}{encurralado}}(e) == 1)}
+\DoxyCodeLine{76         r = 4;}
+\DoxyCodeLine{77     \textcolor{keywordflow}{else}}
+\DoxyCodeLine{78         r = 0;}
+\DoxyCodeLine{79     \textcolor{keywordflow}{return} r;}
+\DoxyCodeLine{80 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_ac272f234a6e3ed2b2e3c05c727e33c75}\label{logica_8h_ac272f234a6e3ed2b2e3c05c727e33c75}} 
@@ -330,36 +331,36 @@ Abre o ficheiro pedido pelo utilizador e lê o seu conteúdo. \end{quote}
 Ao ler o ficheiro, quando chega ao local onde se encontram as jogadas anteriores, chama a função \char`\"{}update\+\_\+array\+\_\+jogadas()\char`\"{}. \end{quote}
 
 
-Definido na linha 125 do ficheiro logica.\+c.
+Definido na linha 126 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{125                                             \{}
-\DoxyCodeLine{126 }
-\DoxyCodeLine{127     FILE *fp;}
-\DoxyCodeLine{128     \textcolor{keywordtype}{char} lin\_fich [BUF\_SIZE], *comando;}
-\DoxyCodeLine{129     \textcolor{keywordtype}{int} k = 0;}
-\DoxyCodeLine{130     \textcolor{keywordtype}{int} r = 0;}
-\DoxyCodeLine{132     strtok(linha, \textcolor{stringliteral}{" "});}
-\DoxyCodeLine{133     comando = strtok (NULL, \textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{135     \textcolor{comment}{//A função "access" retorna -\/1 caso nao encontre o ficheiro.}}
-\DoxyCodeLine{136     \textcolor{keywordflow}{if} (access(comando, F\_OK) != -\/1) \{}
-\DoxyCodeLine{137         \mbox{\hyperlink{dados_8h_a543f64d33cbc5f4c00ad7dc4e60d2105}{reinit}}(e);}
-\DoxyCodeLine{138         e-\/>max\_num\_jogadas = 0;}
-\DoxyCodeLine{139         fp = fopen(comando, \textcolor{stringliteral}{"r"});}
-\DoxyCodeLine{140         \textcolor{keywordflow}{while} (fgets(lin\_fich, BUF\_SIZE, fp) != NULL) \{}
-\DoxyCodeLine{142             \textcolor{keywordflow}{if} (k >= 9) \{}
-\DoxyCodeLine{143                 \mbox{\hyperlink{dados_8h_abadfdc02ae37afa3fc371a15c0090e61}{ler\_tab}}(e, lin\_fich);}
-\DoxyCodeLine{144             \}}
-\DoxyCodeLine{145             k++;}
-\DoxyCodeLine{146         \}}
-\DoxyCodeLine{147         fclose(fp);}
-\DoxyCodeLine{148         r = 1;}
-\DoxyCodeLine{149     \}}
-\DoxyCodeLine{150     \textcolor{keywordflow}{else}}
-\DoxyCodeLine{151         r = 0;}
-\DoxyCodeLine{152     \textcolor{keywordflow}{return} r;}
-\DoxyCodeLine{153 \}}
+\DoxyCodeLine{126                                             \{}
+\DoxyCodeLine{127 }
+\DoxyCodeLine{128     FILE *fp;}
+\DoxyCodeLine{129     \textcolor{keywordtype}{char} lin\_fich [BUF\_SIZE], *comando;}
+\DoxyCodeLine{130     \textcolor{keywordtype}{int} k = 0;}
+\DoxyCodeLine{131     \textcolor{keywordtype}{int} r = 0;}
+\DoxyCodeLine{133     strtok(linha, \textcolor{stringliteral}{" "});}
+\DoxyCodeLine{134     comando = strtok (NULL, \textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{136     \textcolor{comment}{//A função "access" retorna -\/1 caso nao encontre o ficheiro.}}
+\DoxyCodeLine{137     \textcolor{keywordflow}{if} (access(comando, F\_OK) != -\/1) \{}
+\DoxyCodeLine{138         \mbox{\hyperlink{dados_8h_a543f64d33cbc5f4c00ad7dc4e60d2105}{reinit}}(e);}
+\DoxyCodeLine{139         e-\/>max\_num\_jogadas = 0;}
+\DoxyCodeLine{140         fp = fopen(comando, \textcolor{stringliteral}{"r"});}
+\DoxyCodeLine{141         \textcolor{keywordflow}{while} (fgets(lin\_fich, BUF\_SIZE, fp) != NULL) \{}
+\DoxyCodeLine{143             \textcolor{keywordflow}{if} (k >= 9) \{}
+\DoxyCodeLine{144                 \mbox{\hyperlink{dados_8h_abadfdc02ae37afa3fc371a15c0090e61}{ler\_tab}}(e, lin\_fich);}
+\DoxyCodeLine{145             \}}
+\DoxyCodeLine{146             k++;}
+\DoxyCodeLine{147         \}}
+\DoxyCodeLine{148         fclose(fp);}
+\DoxyCodeLine{149         r = 1;}
+\DoxyCodeLine{150     \}}
+\DoxyCodeLine{151     \textcolor{keywordflow}{else}}
+\DoxyCodeLine{152         r = 0;}
+\DoxyCodeLine{153     \textcolor{keywordflow}{return} r;}
+\DoxyCodeLine{154 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_aec4a963a88af44348027ec7cf17ff47a}\label{logica_8h_aec4a963a88af44348027ec7cf17ff47a}} 
@@ -390,23 +391,23 @@ Extrai o algarismo que é introduzido após o comando \char`\"{}pos\char`\"{} (\
 Verifica que o comando \char`\"{}pos\char`\"{} apenas está a ser introduzido a uma jogada anterior e não à jogada atual. \end{quote}
 
 
-Definido na linha 181 do ficheiro logica.\+c.
+Definido na linha 182 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{181                                  \{}
-\DoxyCodeLine{182     \textcolor{keywordtype}{char} *comando, *end;}
-\DoxyCodeLine{183     \textcolor{keywordtype}{int} r, max = \mbox{\hyperlink{dados_8h_a9f2d95954ffa63c2f456e9481a883071}{obter\_max\_num\_jog}}(e);}
-\DoxyCodeLine{184     strtok (linha, \textcolor{stringliteral}{" "});}
-\DoxyCodeLine{185     comando = strtok(NULL, \textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{187     r = strtol (comando, \&end, 10);}
-\DoxyCodeLine{189     \textcolor{keywordflow}{if} (r < max + 1) \{}
-\DoxyCodeLine{190         \mbox{\hyperlink{dados_8h_a72bd3fb56f0ac3af60c392b49f76a329}{pos\_helper}}(e, r);}
-\DoxyCodeLine{191         \textcolor{keywordflow}{return} 1;}
-\DoxyCodeLine{192     \}}
-\DoxyCodeLine{193     \textcolor{keywordflow}{else}}
-\DoxyCodeLine{194         \textcolor{keywordflow}{return} 0;}
-\DoxyCodeLine{195 \}}
+\DoxyCodeLine{182                                  \{}
+\DoxyCodeLine{183     \textcolor{keywordtype}{char} *comando, *end;}
+\DoxyCodeLine{184     \textcolor{keywordtype}{int} r, max = \mbox{\hyperlink{dados_8h_a9f2d95954ffa63c2f456e9481a883071}{obter\_max\_num\_jog}}(e);}
+\DoxyCodeLine{185     strtok (linha, \textcolor{stringliteral}{" "});}
+\DoxyCodeLine{186     comando = strtok(NULL, \textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{188     r = strtol (comando, \&end, 10);}
+\DoxyCodeLine{190     \textcolor{keywordflow}{if} (r < max + 1) \{}
+\DoxyCodeLine{191         \mbox{\hyperlink{dados_8h_a72bd3fb56f0ac3af60c392b49f76a329}{pos\_helper}}(e, r);}
+\DoxyCodeLine{192         \textcolor{keywordflow}{return} 1;}
+\DoxyCodeLine{193     \}}
+\DoxyCodeLine{194     \textcolor{keywordflow}{else}}
+\DoxyCodeLine{195         \textcolor{keywordflow}{return} 0;}
+\DoxyCodeLine{196 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_a00a35418e9e9a6c215b653dceb822a03}\label{logica_8h_a00a35418e9e9a6c215b653dceb822a03}} 
@@ -429,21 +430,21 @@ Uma posição para a coluna do tabuleiro.
 \end{DoxyReturn}
 
 
-Definido na linha 169 do ficheiro logica.\+c.
+Definido na linha 170 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{169                                \{}
-\DoxyCodeLine{170     \textcolor{keywordtype}{int} cord;}
-\DoxyCodeLine{171     \textcolor{comment}{//Quando a função isalpha() retornar algum valor diferente de 0, converte-\/o num int e devolve-\/o.f}}
-\DoxyCodeLine{172     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; str[i] != \textcolor{charliteral}{'\(\backslash\)0'}; i++) \{}
-\DoxyCodeLine{173         \textcolor{keywordflow}{if} (isalpha(str[i]) != 0) \{}
-\DoxyCodeLine{174             cord = str[i] -\/ \textcolor{charliteral}{'a'};}
-\DoxyCodeLine{175             \textcolor{keywordflow}{return} cord;}
-\DoxyCodeLine{176         \}}
-\DoxyCodeLine{177     \}}
-\DoxyCodeLine{178     \textcolor{keywordflow}{return} 0;}
-\DoxyCodeLine{179 \}}
+\DoxyCodeLine{170                                \{}
+\DoxyCodeLine{171     \textcolor{keywordtype}{int} cord;}
+\DoxyCodeLine{172     \textcolor{comment}{//Quando a função isalpha() retornar algum valor diferente de 0, converte-\/o num int e devolve-\/o.f}}
+\DoxyCodeLine{173     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; str[i] != \textcolor{charliteral}{'\(\backslash\)0'}; i++) \{}
+\DoxyCodeLine{174         \textcolor{keywordflow}{if} (isalpha(str[i]) != 0) \{}
+\DoxyCodeLine{175             cord = str[i] -\/ \textcolor{charliteral}{'a'};}
+\DoxyCodeLine{176             \textcolor{keywordflow}{return} cord;}
+\DoxyCodeLine{177         \}}
+\DoxyCodeLine{178     \}}
+\DoxyCodeLine{179     \textcolor{keywordflow}{return} 0;}
+\DoxyCodeLine{180 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_a224bb3db996c2f3baca3a72b8509c3ce}\label{logica_8h_a224bb3db996c2f3baca3a72b8509c3ce}} 
@@ -466,23 +467,23 @@ Uma posição para a linha do tabuleiro.
 \end{DoxyReturn}
 
 
-Definido na linha 155 do ficheiro logica.\+c.
+Definido na linha 156 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{155                               \{}
-\DoxyCodeLine{156     \textcolor{keywordtype}{int} r = 0;}
-\DoxyCodeLine{157     \textcolor{keywordtype}{char} *end;}
-\DoxyCodeLine{158     \textcolor{comment}{//Quando enconrtar algum elemento da string para a qual a funcao isdigit() devolva algum valor diferente de 0, converte-\/o num int e devolve-\/o.}}
-\DoxyCodeLine{159     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; str[i] != \textcolor{charliteral}{'\(\backslash\)0'}; i++) \{}
-\DoxyCodeLine{160         \textcolor{keywordflow}{if} (isdigit(str[i]) != 0) \{}
-\DoxyCodeLine{161            r = strtol(\&str[i], \&end, 10);}
-\DoxyCodeLine{162            r = abs(r-\/8);}
-\DoxyCodeLine{163            \textcolor{keywordflow}{return} r;}
-\DoxyCodeLine{164         \}}
-\DoxyCodeLine{165     \}}
-\DoxyCodeLine{166     \textcolor{keywordflow}{return} 0;}
-\DoxyCodeLine{167 \}}
+\DoxyCodeLine{156                               \{}
+\DoxyCodeLine{157     \textcolor{keywordtype}{int} r = 0;}
+\DoxyCodeLine{158     \textcolor{keywordtype}{char} *end;}
+\DoxyCodeLine{159     \textcolor{comment}{//Quando enconrtar algum elemento da string para a qual a funcao isdigit() devolva algum valor diferente de 0, converte-\/o num int e devolve-\/o.}}
+\DoxyCodeLine{160     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; str[i] != \textcolor{charliteral}{'\(\backslash\)0'}; i++) \{}
+\DoxyCodeLine{161         \textcolor{keywordflow}{if} (isdigit(str[i]) != 0) \{}
+\DoxyCodeLine{162            r = strtol(\&str[i], \&end, 10);}
+\DoxyCodeLine{163            r = abs(r-\/8);}
+\DoxyCodeLine{164            \textcolor{keywordflow}{return} r;}
+\DoxyCodeLine{165         \}}
+\DoxyCodeLine{166     \}}
+\DoxyCodeLine{167     \textcolor{keywordflow}{return} 0;}
+\DoxyCodeLine{168 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_ab69d463df342757a679a40c4f6e5d6ae}\label{logica_8h_ab69d463df342757a679a40c4f6e5d6ae}} 
@@ -510,21 +511,21 @@ Copia o nome do ficheiro presente na string \char`\"{}linha\char`\"{} e coloca n
 Cria o ficheiro com o nome pedido pelo utilizador, ou abre-\/o, caso este ja exista. \end{quote}
 
 
-Definido na linha 109 do ficheiro logica.\+c.
+Definido na linha 110 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{109                                                 \{}
-\DoxyCodeLine{110     \textcolor{keywordtype}{char} *comando;}
-\DoxyCodeLine{112     strtok(linha, \textcolor{stringliteral}{" "});}
-\DoxyCodeLine{113     comando = strtok(NULL, \textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{114 }
+\DoxyCodeLine{110                                                 \{}
+\DoxyCodeLine{111     \textcolor{keywordtype}{char} *comando;}
+\DoxyCodeLine{113     strtok(linha, \textcolor{stringliteral}{" "});}
+\DoxyCodeLine{114     comando = strtok(NULL, \textcolor{stringliteral}{"\(\backslash\)n"});}
 \DoxyCodeLine{115 }
-\DoxyCodeLine{117     FILE *fp;}
-\DoxyCodeLine{118     fp = fopen(comando, \textcolor{stringliteral}{"w"});}
-\DoxyCodeLine{119     \mbox{\hyperlink{interface_8h_aa36b92ddb3d9b1fdb93d8524262ee66c}{imprime\_fileTab}}(e, fp);}
-\DoxyCodeLine{120     \mbox{\hyperlink{interface_8h_acb7c3a1d861395fabd4db18a365738b9}{file\_posAnt}}(e, fp);}
-\DoxyCodeLine{121     fclose(fp);}
-\DoxyCodeLine{122 \}}
+\DoxyCodeLine{116 }
+\DoxyCodeLine{118     FILE *fp;}
+\DoxyCodeLine{119     fp = fopen(comando, \textcolor{stringliteral}{"w"});}
+\DoxyCodeLine{120     \mbox{\hyperlink{interface_8h_aa36b92ddb3d9b1fdb93d8524262ee66c}{imprime\_fileTab}}(e, fp);}
+\DoxyCodeLine{121     \mbox{\hyperlink{interface_8h_acb7c3a1d861395fabd4db18a365738b9}{file\_posAnt}}(e, fp);}
+\DoxyCodeLine{122     fclose(fp);}
+\DoxyCodeLine{123 \}}
 
 \end{DoxyCode}
